// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paste.ts: code block copied from renderer and pasted 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "hello",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "world",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
    Object {
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste code with new lines into code block. ensure up arrow is working 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "// Your First C++ Program

#include <iostream>

int main() {
    std::cout << \\"Hello World!\\";
    return 0;
}
",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste code with new lines into code block. ensure up arrow is working1 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "language": null,
        "uniqueId": null,
      },
      "content": Array [
        Object {
          "text": "// Your First C++ Program

#include <iostream>

int main() {
    std::cout << \\"Hello World!\\";
    return 0;
}
",
          "type": "text",
        },
      ],
      "type": "codeBlock",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: block node containing paragraph containing hardbreak and list 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "panelColor": null,
        "panelIcon": null,
        "panelIconId": null,
        "panelIconText": null,
        "panelType": "info",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "test",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "1",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "listItem",
            },
          ],
          "type": "bulletList",
        },
      ],
      "type": "panel",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: bullet list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list ele 1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "list ele 2",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "more ele 1",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "more ele 2",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "bulletList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this is the last ele",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "bulletList",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: hyperlink 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This is the ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "https://www.atlassian.com",
              },
              "type": "link",
            },
          ],
          "text": "selected text",
          "type": "text",
        },
        Object {
          "text": " here",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: ordered list 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this is ele1",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "this is a link ",
                  "type": "text",
                },
                Object {
                  "marks": Array [
                    Object {
                      "attrs": Object {
                        "__confluenceMetadata": null,
                        "href": "http://www.google.com",
                      },
                      "type": "link",
                    },
                  ],
                  "text": "www.google.com",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
            Object {
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "more elements with some ",
                          "type": "text",
                        },
                        Object {
                          "marks": Array [
                            Object {
                              "type": "strong",
                            },
                          ],
                          "text": "format",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
                Object {
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "some addition",
                          "type": "text",
                        },
                        Object {
                          "marks": Array [
                            Object {
                              "type": "em",
                            },
                          ],
                          "text": " formatting",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "listItem",
                },
              ],
              "type": "orderedList",
            },
          ],
          "type": "listItem",
        },
        Object {
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "last element",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "listItem",
        },
      ],
      "type": "orderedList",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: plain text 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "This text is plain.",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: plain text with leading and trailing whitespaces and newlines 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "  text with 2 leading whitespaces",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "  text with 2 leading and trailing whitespaces  ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "text with 2 trailing whitespaces  ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
    Object {
      "content": Array [
        Object {
          "text": "  text with leading tab and 2 trailing whitespaces  ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "  text with leading and trailing tab  ",
          "type": "text",
        },
        Object {
          "type": "hardBreak",
        },
        Object {
          "text": "text with 2 trailing whitespaces  ",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`paste.ts: paste tests on fullpage editor: text formatting 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "marks": Array [
            Object {
              "type": "strong",
            },
          ],
          "text": "bold ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "em",
            },
            Object {
              "type": "strong",
            },
          ],
          "text": "italics and bold ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "em",
            },
          ],
          "text": "some italics only ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "code",
            },
          ],
          "text": "add some code to this ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "underline",
            },
          ],
          "text": "underline this text",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "type": "strike",
            },
          ],
          "text": " strikethrough ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "color": "#00b8d9",
              },
              "type": "textColor",
            },
          ],
          "text": "blue is my fav color",
          "type": "text",
        },
        Object {
          "text": " ",
          "type": "text",
        },
        Object {
          "marks": Array [
            Object {
              "attrs": Object {
                "__confluenceMetadata": null,
                "href": "http://www.google.com",
              },
              "type": "link",
            },
          ],
          "text": "www.google.com",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
